上传源代码

--- a/readMe/study/how_create.html
+++ b/readMe/study/how_create.html
@@ -12,7 +12,8 @@
 	第一次使用该插件时会在项目路径下自动生成一个\GenConfig\GenInitConfig.xml,采用"Easy Code 配置"编辑器打开该文件,
 	  模板路径默认设置在eclipse的安装路径下：<br />
 	  $ECLIPSE_INSTALL_PATH  eclipse安装路径<br />
-	  $PROJECT_PATH 项目路径  建议路径选在项目目录下，这样可以用eclipse来编写修改模板。
+	  $PROJECT_PATH 项目路径。<br/>
+	 
       <br />
 	    <img src="images/mdl_path.png" /><br />
      <p>
@@ -21,6 +22,7 @@
     <br />
     选中一个Java文件，【右键->打开方式->Easy Code】<br />
  点击新增，在弹出框填好内容后，保存到本地即可。<br />
+   <font color=red>tips:建议【模板路径】选在项目目录下，这样可以用eclipse来编写修改模板，实际上直接在工具界面里进行模板编辑是比较困难的。</font>
  <img src="images/create.png" />
 
     </p>
