--- a/readMe/study/how_use.html
+++ b/readMe/study/how_use.html
@@ -10,10 +10,10 @@
 <div style="margin:10px; line-height:18px;  font-size:12px;">
 <span class="tl">工具使用.</span>
 <br />
-1、在插件安装成功之后，任意选中一个java文件用Easy Code编辑器方式打开，在第一次打开文件的过程中，系统自动会在项目中生成一个JEC_CODE文件夹(在eclipse中刷新项目后可看到)，
+1、在插件安装成功之后，任意选中一个java文件用Easy Code编辑器方式打开，在第一次打开文件的过程中，系统自动会在项目中生成一个GenConfig文件夹(在eclipse中刷新项目后可看到)，
 一般情况下，这个文件夹不用理会。<br />
-JEC_CODE文件夹:<br />
-该文件夹中有一个文件config.xml,里面有些默认的配置信息，包括本地模板的存放路径，模板服务器信息(如果模板都存放在本地，则不需要设置)， 等等。
+GenConfig文件夹:<br />
+该文件夹中有一个文件GenInitConfig.xml,里面有些默认的配置信息，包括本地模板的存放路径，模板服务器信息(如果模板都存放在本地，则不需要设置)， 等等。
 具体配置信息可以通过【Easy Code 配置】编辑器进行查看设置。
 <br />
 2、提供了多种使用方式，依照使用习惯自己选择。<br />
