--- a/readMe/study/install.html
+++ b/readMe/study/install.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<div style="margin:10px;">
+<div style="margin:10px;line-height:18px;  font-size:12px;">
   <p><span class="tl">1.将jar包放到eclipse插件目录</span></p>
   <p>将包拷贝到eclipse/plugins目录下。<br />
     <br />
