--- a/readMe/study/anno_param.html
+++ b/readMe/study/anno_param.html
@@ -18,7 +18,7 @@
    【类注释: 】  注释; 以分号结尾<br />
   注释实际上是一对对的key,value的组合。<br />
   eg:<br />
-  isPk="Y"/id,lineId;表示名称为id,lineId的属性默认有了isPk="Y"的注释.<br />
+  isPk="Y"/id,lineId;表示名称为id,lineId的属性(或方法)默认有了isPk="Y"的注释.<br />
   isVO="Y";表示类默认有了isVO="Y"的注释.
   <br />
   
@@ -51,13 +51,6 @@
    生成的注释内容包含在&lt;EasyCode/&gt;中,也是个完整的json对象，在修改注释内容时，确保&lt;EasyCode/&gt;内容是正确的json格式。
    注释修改后，可以在【预设参数】中看到json值会自动更新过来。
    </div>
-   
-    <div class="split">
-	注意:有三个预览的key值，'json1','json2,'json3',这三个key对应的value是json对象，见下图。<br /><br />
-	<img src="images/anno_6.png" />
-	
-	
-	</div>
    
  
    
